(copy_files webview-c/webview.h)

(library
 (name webview_ocaml)
 (public_name webview-ocaml)
 (c_library_flags (:include c_library_flags.sexp))
 (foreign_stubs
  (language c)
  (names webview)
  (flags (:include c_flags.sexp) -O3 -DWEBVIEW_GTK))
 (libraries logs ctypes ctypes.foreign))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run config/discover.exe)))