(copy_files webview-c/webview.h)

(rule
 (targets c_flags.sexp c_library_flags.sexp c_flags.lines)
 (deps    (:discover config/discover.exe))
 (action  (run config/discover.exe)))

(rule
  (targets webview_sys.ml webview_stubs.c)
  (deps (:first-dep webview_sys.c.ml) c_flags.lines)
  (action (run %{bin:ppx_cstubs} %{first-dep} -o %{targets} -- %{read-lines:c_flags.lines})))

(library
 (name webview)
 (public_name webview)
 (c_library_flags (:include c_library_flags.sexp))
 (foreign_stubs
  (language c)
  (names webview_stubs)
  (flags (:include c_flags.sexp) -O2))
 (libraries ctypes ppx_cstubs ctypes.foreign))

